# cotengrust

./: .gitignore  Cargo.toml  README.md  cotengrust.pyi  pyproject.toml  requirements-tests.txt
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: lib.rs
tests/: benchmark.py  test_cotengrust.py
