[package]
name = "cotengrust"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cotengrust"
crate-type = ["cdylib"]

[dependencies]
bit-set = "0.5"
ordered-float = "4.2"
pyo3 = "0.21"
rand = "0.8"
rustc-hash = "1.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
