[package]
name = "cotengrust"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cotengrust"
crate-type = ["cdylib"]

[dependencies]
bit-set = "0.8"
ordered-float = "5.0"
pyo3 = "0.25"
rand = "0.9"
rustc-hash = "2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
