[package]
name = "cotengrust"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cotengrust"
crate-type = ["cdylib"]

[dependencies]
bit-set = "0.8"
num-traits = "0.2"
ordered-float = "5.1"
pyo3 = "0.26"
rand = "0.9"
rustc-hash = "2.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
