[project]
name = "cotengrust"
version = "0.1.1"
description = "Fast contraction ordering primitives for tensor networks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = { file = "LICENSE" }
authors = [
    {name = "Johnnie Gray", email = "johnniemcgray@gmail.com"}
]

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
